# ripas

./: README.md
Doc/datasheets/: Soft_1.docx
Doc/Отчеты/: Отчет о неисправности WT32-ETH02.docx  Руководство по эксплуатации.docx  Тех. инструкция wt32-eth01.docx
Espressif-IDE/wt32_eth01_ble_eth/: sdkconfig
Espressif-IDE/wt32_eth01_ble_eth/main/: CMakeLists.txt  app.c  app.h  app_events.h  batch_builder.c  batch_builder.h  ble.c  ble.h  ble_buffer.c  ble_buffer.h  eth.c  eth.h  main.c  monotonic.c  monotonic.h  packet_builder.c  packet_builder.h  protobuf_builder.c  protobuf_builder.h  scan.pb.c  scan.pb.h  tcp_client.c  tcp_client.h  time_sync.c  time_sync.h  transport.h  transport_tcp.c
Espressif-IDE/wt32_eth01_ble_eth/proto/: scan.options  scan.proto
python/: TCP_server.py  TCP_server_old.py  ble_log_csv.csv  ble_log_proto_csv.csv  ble_log_scanBacthProto_csv.csv  csv_to_excel.py  flaskServer.py  gps.py  scan_pb2.py  test.py
